--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.10
 cryptography==36.0.1
-idna==3.3
-pycparser==2.21
+pytest==6.2.5
 requests==2.27.1
-urllib3==1.26.8
-rsa
